# Kideta

./: .gitignore  Cargo.toml  opencode.json  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/kideta-core/: Cargo.toml
crates/kideta-core/src/: collection.rs  enums.rs  error.rs  lib.rs  metric.rs  payload.rs  record.rs  schema.rs  types.rs
crates/kideta-core/src/distance/: avx2.rs  avx512.rs  detection.rs  hamming.rs  mod.rs  neon.rs  scalar.rs  sse41.rs
crates/kideta-core/src/mmap/: error.rs  mod.rs
crates/kideta-core/src/mmap/unix/: file.rs  mmap_mut.rs  mod.rs  options.rs
crates/kideta-core/src/mmap/windows/: mod.rs  native.rs
crates/kideta-core/src/utils/: arena.rs  base64.rs  bitset.rs  crc32c.rs  hash.rs  heap.rs  roaring.rs  sha256.rs  slab.rs
crates/kideta-index/: Cargo.toml
crates/kideta-index/src/: lib.rs  search_params.rs  traits.rs
crates/kideta-index/src/flat/: flat_index.rs  mod.rs  parallel.rs
crates/kideta-storage/: Cargo.toml
crates/kideta-storage/src/: lib.rs
crates/kideta-storage/src/memory/: mod.rs  policy.rs
