[workspace]
resolver = "2"

members = [
    "crates/*"
]

exclude = [
    "crates/*/target",
    "crates/*/tests",
    "crates/*/examples",
    "crates/*/benches",
]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.92"
authors      = ["Kideta contributors"]
license      = "Apache-2.0"
repository   = "https://github.com/gityuko-hb/kideta"
homepage     = "https://github.com/gityuko-hb/kideta"
keywords     = ["vector", "search", "embedding", "ann", "similarity"]
categories   = ["database", "algorithms", "science"]

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
chrono      = { version = "0.4", features = ["serde"] }
tokio       = { version = "1", features = ["full"] }
thiserror   = "2"
anyhow      = "1"
tracing            = "0.1"
tracing-subscriber   = "0.3"
libc       = "0.2"
rayon       = "1.5"
half      = "2.7"
proptest    = "1"
criterion   = "0.8"
tempfile    = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 8
opt-level = 2
strip = false

[profile.bench]
inherits        = "release"
strip           = "none"
debug           = 1