[package]
name = "kideta-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde     = { workspace = true }
thiserror = { workspace = true }
libc      = { workspace = true }
rayon     = { workspace = true }
tracing   = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile   = { workspace = true }
proptest   = { workspace = true }